GTK 3.22/3.20: ensure Libreoffice horiz scrollbar steppers work At the cost of partial horiz scrollbar rendering in Yelp

--- a/UbuntuStudio_Legacy/gtk-3.20/gtk-widgets.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/gtk-widgets.css
@@ -1174,15 +1174,22 @@ scrollbar .button {
 	padding: 0px;
 }
 /*Workaround for Yelp scrollbar redraw bug caused my minumum height */
+/*Compromise for working steppers in Libreoffice, partial horiz scrollbar display in Yelp*/
+scrollbar.horizontal button{
+	min-height: 8px;
+	min-width: 14px;
+}
+
+/*Keep this off as many scrollbars as possible */
 /*Also ensure arrow icons same size vertical and horizontal */
 scrollbar.horizontal button{
-	min-height: 0px;
+	min-height: 8px;
 	min-width: 14px;
 }
 
 scrollbar.vertical button{
 	min-height: 14px;
-	min-width: 0px;
+	min-width: 14px;
 }
 
 scrollbar.slider:disabled {
